# ddginternal

./: .gitignore  404.html  Cargo.toml  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  test.py
.github/workflows/: build-docs.yml
available-modules/: index.html
basics/: index.html
comparison/: index.html
ddgsearch/: __init__.py  core.py  primp.py  primp.pyi
docs/: available-modules.md  basics.md  comparison.md  index.md  loading-modules.md
python/: README.md
python/ddginternal/: __init__.py  core.py  ddginternal.pyi  exceptions.py  module.py  modules.py  primp.py  primp.pyi  utils.py
python/tests/: test_all.py
search/: search_index.json
src/: abstract_text.rs  exceptions.rs  lib.rs  module_base.rs  module_places.rs  module_recipes.rs  modules.rs  schema.rs
