[package]
name = "ddginternal"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ddginternal"
crate-type = ["cdylib"]

[dependencies]
html2text = "0.12.5"
pyo3 = "0.22.0"
regex = "1.10.6"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
